# delay-tolerant-networks

./: .flake8  .gitignore  .pre-commit-config.yaml  =1.46  DEMO_3D_VISUALIZATION.md  INTEGRATION_STATUS.md  Makefile  Meeting Summaries.md  QUICK_START.md  README.md  STATUS.md  package-lock.json  pair1_message_corrected.md  requirements.txt  sample_constellation.csv  sample_ground_stations.csv
backend/: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/config/: api_config.json
backend/src/: main.py  test_mvp.py  test_satellites.csv
backend/src/dtn/: __init__.py  simulation.py
backend/src/dtn/analysis/: __init__.py  statistical_analysis.py
backend/src/dtn/api/: __init__.py  app.py  server.py
backend/src/dtn/core/: __init__.py  bundle.py  dtn_node.py  satellite_physical_layer.py  simulation.py
backend/src/dtn/experiments/: __init__.py  experiment_runner.py
backend/src/dtn/mobility/: __init__.py  synthetic_models.py
backend/src/dtn/networking/: __init__.py  link_layer.py  restoration.py
backend/src/dtn/orbital/: __init__.py  constellation_config.py  contact_prediction.py  contact_predictor.py  mechanics.py  orbital_mechanics.py  satellite_loader.py  satellite_mobility.py
backend/src/dtn/routing/: __init__.py  routing.py  routing_epidemic.py  routing_prophet.py  routing_spray_and_wait.py
backend/src/experiment_results/: e1_protocol_comparison.json
backend/src/test_results/: e1_protocol_comparison.json
backend/tests/: test_bundle.py  test_contact_prediction.py  test_routing_epidemic.py  test_routing_spray_and_wait.py
(+93 files in other folders)
