[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtn-simulator"
version = "0.1.0"
description = "Delay Tolerant Networks Satellite Simulation"
authors = [
    {name = "DTN Team - Groups 3&7"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "skyfield>=1.46",
    "astropy>=6.0.0",
    "numpy>=1.24.0",
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0", 
    "mypy>=1.0.0",
]

[project.scripts]
dtn-sim = "dtn.main:main"
dtn-api = "dtn.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=dtn --cov-report=term-missing"